<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project
                   2024 Paranoid Android

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.

     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/fan_control_title">

    <SwitchPreference
        android:defaultValue="false"
        android:key="fan_control_enable"
        android:title="@string/fan_control_enable_title" />

    <SeekBarPreference
        android:key="fan_control_manual_slider"
        android:title="@string/fan_control_intensity_title"
        android:max="5"
        android:persistent="false" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="fan_control_enable_fast_charge"
        android:title="@string/fan_control_enable_fast_charge_title" />

</PreferenceScreen>
